tests/error/inout_errors/moved_out.err
Error: Linearity violation (at $FILE:20:9)
   | 
18 | 
19 | @guppy(module)
20 | def test(s: MyStruct) -> None:
   |          ^^^^^^^^^^^ Borrowed argument s cannot be returned to the caller ...
   | 
21 |     use(s.q)
   |         --- since `s.q` with linear type `qubit` was already
   |             UseKind.CONSUME here

Help: Consider writing a value back into `s.q` before returning

Guppy compilation failed due to 1 previous error
